<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="spotify_streamer">SPOTIFY STREAMER</string>
    <string name="soccer_1">SCORES APP</string>
    <string name="soccer_2">LIBRARY APP</string>
    <string name="build_bigger">BUILD IT BIGGER</string>
    <string name="xyz_reader">XYZ READER</string>
    <string name="capstone">CAPSTONE: MY OWN APP</string>
    <string name="app_title">My Nanodegree Apps!</string>
</resources>
